# Flask-Production-Starter

./: .coverage  .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TROUBLESHOOTING.md  config.py  data-dev.sqlite  docker-compose.yml  gunicorn.conf.py  prometheus.md  prometheus.yml  pyproject.toml  run.py  run_tests.sh  test_endpoint.py  test_endpoint.sh  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  logger.py
app/controller/: __init__.py  auth.py  health.py  message.py  poster.py
app/exceptions/: base.py
app/extensions/: error_handle.py  extensions.py  prometheus_metrics.py  rate_limiting.py  request_tracking.py  security_headers.py  structured_logging.py  swagger.py  system_checks.py
app/models/: __init__.py  poster.py  user.py
app/schemas/: auth.py  poster.py
app/services/: __init__.py  auth_service.py  message_service.py  poster.py
app/utils/: __init__.py  env_validator.py  validators.py
docs/: add-module.md  enterprise-template-standard.md  migration-governance.md  release-policy.md
scripts/: scaffold_module.py
tests/: conftest.py  test_api.py  test_env_validator.py  test_poster_endpoints.py  test_schemas.py  test_services.py  test_system_checks.py  test_validators.py
