[project]
name = "flask-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.12.5",
    "gunicorn>=21.2.0",
    "flask-restx>=0.5.1",
    "python-dotenv>=1.0.0",
    "flask-limiter>=3.5.0",
    "prometheus-client>=0.18.0",
    "email-validator>=2.0.0",
    "requests>=2.32.5",
]
[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "flask_bcrypt",
    "flask_cors",
    "flask_migrate",
    "flask_jwt_extended",
    "flask_restx",
    "prometheus_client",
    "flask_sqlalchemy",
    "flask_sqlalchemy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.models.*",
]
ignore_errors = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "flake8>=7.0.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "alembic>=1.13.0",
    "autoflake>=2.0.0",
]
